Z-index fix

--- a/src/scss/_resume.scss
+++ b/src/scss/_resume.scss
@@ -18,7 +18,7 @@
     width: 20px;
     height: 20px;
     margin-left: -10px;
-    z-index: 555;
+    z-index: 100;
     background-size: 20px;
     background-position: center;
     background-repeat: no-repeat;
